--- a/JokesWebAppMVC/Views/Jokes/Index.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<JokesWebAppMVC.Models.Joke>
 
 @{
-    ViewData["Title"] = "Full Joke List";
+    ViewData["Title"] = "Joke List";
 }
 
 <h1>Joke List</h1>
