--- a/JokesWebAppMVC/Views/Jokes/Create.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Create.cshtml
@@ -22,6 +22,14 @@
                 <input asp-for="JokeAnswer" class="form-control" />
                 <span asp-validation-for="JokeAnswer" class="text-danger"></span>
             </div>
+
+            <!-- New stuff I added -->
+            <div class="form-group">
+                <label asp-for="Genre" class="control-label"></label>
+                <select asp-for="Genre" class="form-control" 
+                        asp-items="@(new SelectList(@ViewBag.ListofCategory, "Value", "Text"))"></select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
