--- a/JokesWebAppMVC/Views/Jokes/Index.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Index.cshtml
@@ -9,6 +9,8 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+
 <table class="table">
     <thead>
         <tr>
@@ -16,26 +18,35 @@
                 @Html.DisplayNameFor(model => model.JokeQuestion)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.JokeAnswer)
+                @Html.DisplayNameFor(model => model.Genre)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.JokeQuestion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JokeAnswer)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="accordion-toggle" data-toggle="collapse" data-target="#AA_@(item.Id)">
+                    <button class="btn btn-outline-info" type="button">
+                    @Html.DisplayFor(modelItem => item.JokeQuestion)
+                    </button>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genre)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td id="AA_@(item.Id)" class="accordion-body collapse">
+                    @Html.DisplayFor(modelItem => item.JokeAnswer)
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
