--- a/JokesWebAppMVC/Views/Jokes/Edit.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Edit.cshtml
@@ -23,6 +23,13 @@
                 <input asp-for="JokeAnswer" class="form-control" />
                 <span asp-validation-for="JokeAnswer" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Genre" class="control-label"></label>
+                <select asp-for="Genre" class="form-control"
+                        asp-items="@(new SelectList(@ViewBag.ListofCategory, "Value", "Text"))"></select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
