--- a/JokesWebAppMVC/Views/Jokes/Search.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Search.cshtml
@@ -1,12 +1,21 @@
-﻿<h4>Search For A Joke</h4>
+﻿@model JokesWebAppMVC.Models.Joke
+
+<h4>Search For A Joke</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="SearchResults">
             <div class="form-group">
-                <label for="SearchPhrase" class="control-label"></label>
+                <label for="SearchPhrase" class="control-label">SearchPhrase</label>
                 <input name="SearchPhrase" class="form-control" />
             </div>
+
+            <div class="form-group">
+                <label asp-for="Genre" class="control-label"></label>
+                <select asp-for="Genre" class="form-control"
+                        asp-items="@(new SelectList(@ViewBag.ListofCategory, "Value", "Text"))"></select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Search" class="btn btn-primary" />
             </div>
