--- a/JokesWebAppMVC/Views/Jokes/Details.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Details.cshtml
@@ -44,6 +44,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
+    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger">Delete</a>
     <a asp-action="Index">Back to List</a>
 </div>
