--- a/JokesWebAppMVC/Views/Jokes/Details.cshtml
+++ b/JokesWebAppMVC/Views/Jokes/Details.cshtml
@@ -44,7 +44,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
-    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger">Delete</a>
+    @if (User.Identity.Name == Model.Author)
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger">Delete</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
