--- a/JokesWebAppMVC/Views/_ViewImports.cshtml
+++ b/JokesWebAppMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using JokesWebAppMVC
 @using JokesWebAppMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+@using JokesWebAppMVC.Authorization;
